--- a/static/index.html
+++ b/static/index.html
@@ -24,8 +24,28 @@
         register(name,email,password);
       }
     </script>
+    <style>
+       @import url("https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap");
+      .navbar1 {
+        background: #09203f !important;
+      }
+    </style>
   </head>
   <body>
+    <nav class="navbar bg-body-tertiary navbar1">
+      <div class="container-fluid">
+        <span
+          class="navbar-brand mb-0 h1"
+          style="
+            color: white;
+            padding: 0.8rem !important;
+            font-size: 30px;
+            font-family: 'Berkshire Swash', cursive;
+          "
+          >iNote <i class="fa-duotone fa-file-pen"></i>
+          </span>
+      </div>
+    </nav>
     <div class="container">
       <div class="row justify-content-center mt-5">
         <div class="col-md-6">
