added update functionality and auth system to avoid login for logged in user

--- a/static/login.html
+++ b/static/login.html
@@ -17,7 +17,7 @@
         login(email,password);
       }
 
-      const onRegister = (e) =>{
+      const onRegister = () =>{
         const name= f2.name.value;
         const email = f2.email.value;
         const password = f2.password.value;
